# try-spec-kit

./: .gitignore
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env  .gitignore  Cargo.toml
backend/.cargo/: config.toml
backend/examples/: seed_data.rs
backend/migrations/: 001_initial_schema.sql  002_indexes.sql
backend/src/: error.rs  lib.rs  main.rs  validation.rs
backend/src/api/: metadata.rs  mod.rs
backend/src/api/documents/: create_auto.rs  create_manual.rs  delete.rs  get_all.rs  get_by_id.rs  get_by_number.rs  mod.rs  search.rs  update_path.rs
backend/src/models/: business_task.rs  department.rs  document_path.rs  document_type.rs  generation_rule.rs  mod.rs  newtypes.rs  permissions.rs  section.rs  user.rs
backend/src/services/: document_service.rs  generation_service.rs  mod.rs  organization_service.rs  query_service.rs
backend/src/storage/: business_task.rs  counter.rs  db.rs  department.rs  document_path.rs  document_type.rs  mod.rs  query.rs  section.rs  user.rs
backend/tests/contract/: test_document_path_create_auto.rs  test_document_path_create_manual.rs  test_document_path_delete.rs  test_document_path_get_id.rs  test_document_path_get_number.rs  test_document_path_search.rs  test_document_path_update.rs  test_generation_counter.rs  test_generation_generate.rs  test_generation_scope.rs  test_query_all.rs  test_query_builder.rs  test_query_by_dept.rs  test_query_by_section.rs  test_query_by_task.rs  test_query_by_type.rs
backend/tests/integration/: test_quickstart_step10_performance.rs  test_quickstart_step1_init.rs  test_quickstart_step2_org.rs  test_quickstart_step3_user.rs  test_quickstart_step4_type.rs  test_quickstart_step5_autogen.rs  test_quickstart_step6_multibyte.rs  test_quickstart_step7_query.rs  test_quickstart_step8_delete.rs  test_quickstart_step9_concurrent.rs
frontend/: package-lock.json  package.json
specs/001-db/: IMPLEMENTATION_REPORT.md  data-model.md  plan.md  quickstart.md  (+3 more)
(+16 files in other folders)
