[package]
name = "document-path-db"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "document_path_db"
path = "src/lib.rs"

[[bin]]
name = "document-path-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
