[package]
name = "document-path-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[lib]
name = "document_path_db"
path = "src/lib.rs"

[[bin]]
name = "document-path-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# UUID generation
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
